# DAIry

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/dairy/: __init__.py  cli.py
src/dairy/templates/: agents_block.md  current.md
tests/: test_cli.py
