[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dairy-ai"
version = "0.1.0"
description = "A tiny local AI diary for restoring Codex project context across sessions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "DAIry contributors" }
]
keywords = ["codex", "ai", "context", "memory", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
dairy = "dairy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dairy = ["templates/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

